--- a/src/app/main-queue/new-command/new-command.component.scss
+++ b/src/app/main-queue/new-command/new-command.component.scss
@@ -13,15 +13,53 @@
   .customername-form-field {
     padding-left: 10px;
     width: 272px;
+
+    .mat-form-field-infix {
+      position: relative;
+      bottom: 10px;
+    }
+
+    .mat-form-field-wrapper {
+      position: static !important;
+      height: 44px !important;
+    }
   }
 
   .label-color {
     color: #C4C5C6
   }
 
+  .mat-form-field-underline {
+    display: none;
+  }
+
   .mat-form-field.mat-focused {
     .mat-form-field-ripple {
       background-color: #C4C5C6;
+    }
+  }
+
+  .driver-form-field {
+    width: 180px;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-top: 13px;
+  }
+
+  .order-form-field {
+    margin-top: 13px;
+    .mat-form-field-infix {
+      position: relative;
+      bottom: 15px;
+    }
+
+    .mat-form-field-wrapper {
+      position: static !important;
+      height: 30px !important;
+    }
+
+    .mat-form-field-flex {
+      height: 30px;
     }
   }
 }
