--- a/src/app/sidenav-component/sidenav-component.component.scss
+++ b/src/app/sidenav-component/sidenav-component.component.scss
@@ -13,76 +13,80 @@
 // }
 
 .navigation ul {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.active_page-color {
+  background-color: #e6b300;
 }
 
 .navigation ul li {
-    position: relative;
-    width: 100%;
-    list-style: none;
-    margin-left: -19px;
-    margin-top: 10px;
+  position: relative;
+  width: 100%;
+  list-style: none;
+  margin-left: -19px;
+  margin-top: 10px;
 }
 
 .navigation ul li:hover {
-    background-color: #e6b300;
+  background-color: #e6b300;
 }
 
 .navigation ul li a {
-    position: relative;
-    display: block;
-    width: 100%;
-    display: flex;
-    text-decoration: none;
+  position: relative;
+  display: block;
+  width: 100%;
+  display: flex;
+  text-decoration: none;
 }
 
 .navigation ul li a .icon {
-    margin-left: 40px;
-    position: absolute;
-    display: block;
-    width: 100%;
-    min-width: 60px;
-    height: 60px;
-    line-height: 60px;
-    color: black;
+  margin-left: 40px;
+  position: absolute;
+  display: block;
+  width: 100%;
+  min-width: 60px;
+  height: 60px;
+  line-height: 60px;
+  color: black;
 }
 
 .navigation ul li a .icon .fas {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 .navigation ul li a .title {
-    position: relative;
-    display: block;
-    padding: 0 70px;
-    height: 60px;
-    line-height: 60px;
-    text-align: start;
-    white-space: nowrap;
-    color: black;
-    margin-left: 45px;
+  position: relative;
+  display: block;
+  padding: 0 70px;
+  height: 60px;
+  line-height: 60px;
+  text-align: start;
+  white-space: nowrap;
+  color: black;
+  margin-left: 45px;
 }
 .header-dimensions {
-    height: 65px;
-    margin-left:77px;
+  height: 65px;
+  margin-left:77px;
   
     .credentials {
-      position: relative;
-      float: right;
-      margin-right: 20px;
-      margin-top: 17px;
+    position: relative;
+    float: right;
+    margin-right: 20px;
+    margin-top: 17px;
     }
   
     .nav-trigger-button {
-      position: relative;
-      float: left;
-      width: 60px;
-      background-color: #e6b300;
-      cursor: pointer;
-      transition: margin-left 0.5s
+    position: relative;
+    float: left;
+    width: 60px;
+    background-color: #e6b300;
+    cursor: pointer;
+    transition: margin-left 0.5s
     }
   
     .nav-trigger-button::before {
