--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,65 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+    // Classes made by our team
+
+    .main_page-position {
+        margin-top: -17px;
+        margin-left: 77px;
+        z-index: 900;
+    }
+
+// Width Classes
+.w-225px {
+    width: 225px;
+}
+
+.w-365px {
+    width: 365px;
+}
+
+.w-470px {
+    width: 470px;
+}
+
+// Margin Classes:
+    // Margin Left Classes
+.ml-5px {
+    margin-left: 5px;
+}
+
+.ml-10px {
+    margin-left: 10px;
+}
+
+.ml-70px {
+    margin-left: 70px;
+}
+
+.ml-75px {
+    margin-left: 75px;
+}
+
+.ml-255px {
+    margin-left: 255px;
+}
+
+    // Margin Top Classes
+.-mt-33px {
+    margin-top: -33px;
+}
+
+.mt-10px {
+    margin-top: 10px
+}
+
+//Height Classes:
+.h-27px {
+    height: 27px;
+}
+
+.h-60px {
+    height: 60px;
+}
