--- a/src/app/main-pages/queue/new-command/new-command.component.scss
+++ b/src/app/main-pages/queue/new-command/new-command.component.scss
@@ -79,6 +79,8 @@
   }
 
   .save_button {
+    width: 16px;
+    height: 16px;
     margin-left: 255px;
     margin-top: 10px;
     cursor: pointer;
