Unshift the new command and trying to get the value of textarea.

--- a/src/app/main-pages/queue/new-command/new-command.component.html
+++ b/src/app/main-pages/queue/new-command/new-command.component.html
@@ -27,7 +27,7 @@
         </mat-form-field>
     </span>
     <span class="h-60px w-470px ml-75px">
-        <textarea placeholder="Notes" matInput class="h-27px w-470px notes"></textarea>
+        <textarea id="notes" placeholder="Notes" class="h-27px w-470px notes p-0px"></textarea>
     </span>
     <i class="far fa-save save_button" (click)="CommandSaved()"></i>
 </div>
