--- a/src/app/main-pages/queue/commands/commands.component.html
+++ b/src/app/main-pages/queue/commands/commands.component.html
@@ -26,6 +26,6 @@
         </mat-form-field>
     </span>
     <span class="h-60px w-470px ml-75px">
-        <textarea placeholder="Notes" matInput class="h-27px w-470px notes"></textarea>
+        <textarea placeholder="Notes" class="h-27px w-470px notes p-0px"></textarea>
     </span>
 </div>
