--- a/src/app/main-pages/queue/commands/commands.component.scss
+++ b/src/app/main-pages/queue/commands/commands.component.scss
@@ -1,8 +1,10 @@
-.trash_button {
-  width: 16px;
-  height: 16px;
-  margin-left: 255px;
-  margin-top: 10px;
-  cursor: pointer;
-  color: red;
+app-commands {
+  .trash_button {
+    width: 16px;
+    height: 16px;
+    margin-left: 255px;
+    margin-top: 10px;
+    cursor: pointer;
+    color: red;
+  }
 }
