--- a/src/app/main-pages/queue/new-command/new-command.component.html
+++ b/src/app/main-pages/queue/new-command/new-command.component.html
@@ -16,7 +16,8 @@
         </mat-form-field>
     </span>
     <div class="ngx-timepicker-field ml-70px w-225px">
-        <ngx-timepicker-field #timepickerField [buttonAlign]="'left'" [defaultTime]="'11:11'" [format]="24" [(ngModel)]='timepicker'></ngx-timepicker-field>
+        <ngx-timepicker-field #timepickerField [buttonAlign]="'left'" [defaultTime]="'11:11'" [format]="24"
+            [(ngModel)]='timepicker'></ngx-timepicker-field>
     </div>
     <span class="order-form-field col-start-4 w-400px">
         <mat-form-field floatLabel='never' class="driver-form-field mt-0 ">
