--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,3 +73,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .h-60px {
     height: 60px;
 }
+
+.mat-input-element {
+    color: black !important;
+}
+
+textarea, i {
+    color: black !important;
+}
