--- a/src/app/main-pages/queue/main-queue.component.html
+++ b/src/app/main-pages/queue/main-queue.component.html
@@ -1,4 +1,13 @@
-<div class="main_page-position">
-    <app-new-command (saveEmittor)='NewOrder($event)'></app-new-command>
-    <div *ngFor="let order of orders; let i = index"><app-commands [index]= "i"></app-commands></div>
-</div>
+<mat-sidenav-container class="example-container">
+    <mat-sidenav mode="over" [(opened)]="openSidenav" position="end" class="sidenav-class">
+        <router-outlet></router-outlet>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <div class="main_page-position">
+            <app-new-command (saveEmittor)='NewOrder($event)'></app-new-command>
+            <div *ngFor="let order of orders; let i = index">
+                <app-commands (toggleSidenav)="toggleSidenav()" [index]="i"></app-commands>
+            </div>
+        </div>
+    </mat-sidenav-content>
+</mat-sidenav-container>
