--- a/src/app/main-pages/queue/main-queue.component.html
+++ b/src/app/main-pages/queue/main-queue.component.html
@@ -1,5 +1,6 @@
 <mat-sidenav-container class="example-container">
     <mat-sidenav mode="over" [(opened)]="openSidenav" position="end" class="sidenav-class">
+        <app-page-frame-sidenav></app-page-frame-sidenav>
         <router-outlet></router-outlet>
     </mat-sidenav>
     <mat-sidenav-content>
