--- a/src/app/shared/components/material-shared-text-column/material-shared-text-column.component.html
+++ b/src/app/shared/components/material-shared-text-column/material-shared-text-column.component.html
@@ -1,4 +1,4 @@
-<ng-contaier matColumnDef='columnName'>
+<!-- <ng-contaier matColumnDef='columnName'>
     <th mat-header-cell *matHeaderCellDef> {{columnLabel}} </th>
     <td mat-cell *matCellDef="let element"> {{element.score}} </td>
-</ng-contaier>
+</ng-contaier> -->
