--- a/src/app/shared/components/material-shared-table/material-shared-table.component.html
+++ b/src/app/shared/components/material-shared-table/material-shared-table.component.html
@@ -1,8 +1,12 @@
-<!-- <table
+<table
     mat-table 
-    [dataSource]="" 
+    [dataSource]="sharedDataSource" 
     class="mat-elevation-z8"
-> -->
-<!-- Dynamic content -->
-<!-- <ng-content></ng-content>
-</table> -->
+> 
+
+<ng-content></ng-content>
+
+
+<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
