--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,3 +81,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 textarea, i {
     color: black !important;
 }
+
+table {
+    width: 100%;
+}
