Renaming Page Frame Tab Component.

--- a/src/app/main-pages/queue/main-queue.component.html
+++ b/src/app/main-pages/queue/main-queue.component.html
@@ -1,4 +1,4 @@
-<app-page-frame-sidenav
+<app-page-frame-tab
     [tabs]="tabs"
 >
     <div class="main_page-position">
@@ -7,4 +7,4 @@
             <app-commands (toggleSidenav)="toggleSidenav()" [index]="i"></app-commands>
         </div>
     </div>
-</app-page-frame-sidenav>
+</app-page-frame-tab>
