Material Shared Table.

--- a/src/app/shared/components/material-shared-text-column/material-shared-text-column.component.html
+++ b/src/app/shared/components/material-shared-text-column/material-shared-text-column.component.html
@@ -1,4 +1,8 @@
-<ng-container matColumnDef="columnName">
-    <th mat-header-cell *matHeaderCellDef>{{ label }}</th>
-    <td mat-cell *matCellDef="let element"></td>
+<ng-container [matColumnDef]="name">
+    <th mat-header-cell *matHeaderCellDef [ngClass]="headerClass"
+    >{{columnLabel}}</th>
+    <td mat-cell *matCellDef="let element" [ngClass]="dataClass"
+    >{{element[name]}}</td>
+    <!--The element represents the hole column dataSource and the name
+        targest the specific column. -->
 </ng-container>
