--- a/src/app/shared/components/material-shared-table/material-shared-table.component.html
+++ b/src/app/shared/components/material-shared-table/material-shared-table.component.html
@@ -2,11 +2,9 @@
     mat-table 
     [dataSource]="sharedDataSource" 
     class="mat-elevation-z8"
-> 
+>
+    <ng-content></ng-content>
 
-<ng-content></ng-content>
-
-
-<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-header-row *matHeaderRowDef="columns">{{column?.label}}</tr>
+    <tr mat-row *matRowDef="let row; columns: columns;"></tr>
 </table>
