Page Frame Component.

--- a/src/app/shared/components/sidenav-component/sidenav-component.component.html
+++ b/src/app/shared/components/sidenav-component/sidenav-component.component.html
@@ -1,7 +1,7 @@
 <div class="navigation" id="sidenav-navigation" >
     <ul>
         <li routerLinkActive="active_page-color">
-            <a [routerLink]="['/queue']">
+            <a [routerLink]="['general',{ outlets: { tab: ['queue']} }]">
             <span class="icon"><i class="fas fa-route"></i></span>
             <span class="title">Queue</span>
             </a>
