--- a/src/app/shared/components/page-frame/page-frame.component.scss
+++ b/src/app/shared/components/page-frame/page-frame.component.scss
@@ -16,4 +16,14 @@ app-page-frame {
         height: 32px;
         border-radius: 10%;
     }
+
+    .drawer-wrapper {
+        background: white;
+        height: 882px;
+        margin-top: -17px;
+    }
+    
+    .sidenav {
+        width: 1640px;
+    }
 }
