--- a/src/app/shared/components/page-frame-sidenav/page-frame-sidenav.component.html
+++ b/src/app/shared/components/page-frame-sidenav/page-frame-sidenav.component.html
@@ -1,11 +1,11 @@
-<!-- <mat-toolbar class="toolbar">
-    <div class="naviagation_routes"> -->
+<mat-toolbar class="toolbar">
+    <div class="naviagation_routes">
         <!-- The class below is applied when routerLink match the value -->
         <!-- It targets the routerLink in a tag -->
-        <!-- <div routerLinkActive="navigation_active" *ngFor="let tab of pageConfiguration.tabs">
+        <div routerLinkActive="navigation_active" *ngFor="let tab of tabs">
             <a
                 routerLinkActive="active_tab"
-                [routerLink]="[{ outlets: { tab: [tab.path]} }]"
+                [routerLink]="[].concat(tab.path)"
             >
                 <span>
                     {{ tab.title }}
@@ -13,6 +13,5 @@
             </a>
         </div>
     </div>
-    <div class="buttons"></div>
-</mat-toolbar> -->
+</mat-toolbar>
 <router-outlet></router-outlet>
